# slackline

./: .gitignore  DYNAMICS_README.md  DYNAMIC_QUICKSTART.md  README.md  generate_dynamic_examples.py  generate_equations.py  generate_plots.py  pyproject.toml  test_dynamic_minimal.py  test_dynamic_simple.py
src/: api.py  api_dynamic.py  boundary_condition_integrator.py  calculus.py  derivative.py  euler_integrator.py  gui.py  integrator.py  lagrangians.py  models.py  runge_kutta_integrator.py  server.py  slacklines.py  tensorflow.py  test.py
src/core/: calculus.py  dynamics.py  integrator.py  lagrangians.py  slacklines.py
src/scripts/: basic_derivative_optimisation.py  free.py  main.py  take12.py  take13.py
test/: test_derivative.py
