[tool.poetry]
name = "physics"
version = "0.1.0"
description = "A collection of scripts exploring different kinds of physics."
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.scripts]
main = "src.scripts.main:main"
tf = "src.scripts.tensorflow:main"
free = "src.scripts.free:main"
take12 = "src.scripts.take12:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.9.3"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
tensorflow = "^2.11.0"
findiff = "^0.9.2"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
