[tool.poetry]
name = "slackline"
version = "0.2.0"
description = "Lagrangian-mechanical models of an elastic slackline for load estimation."
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.scripts]
rk = "src.runge_kutta_integrator:main"
bc = "src.boundary_condition_integrator:main"
euler = "src.euler_integrator:main"
models = "src.models:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.9.3"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
findiff = "^0.9.2"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
